data/all_generated_tests/raw_wast_tests/br_StackCorruption_256.wast
;; 7. **Test 7: Label Index Out of Valid Range**    - A test where `br` instructions incorrectly reference a label index outside of the valid range of the current context's block structure.    - Constraint: Validate that invalid label index references are correctly handled.    - Stack Corruption Check: Ensure the stack remains unaffected by invalid label jumps.

(assert_invalid
  (module
    (func $label-index-out-of-range
      (block (result i32)
        (br 1)
      )
      (i32.eqz) (drop)
    )
  )
  "unknown label"
)